# terong

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  cert.crt  duangler.toml  example.duangler.toml  example.terong.toml  key.key  todo.md
.github/: dependabot.yaml
.github/workflows/: check.yaml  dependabot.yaml
belanda/: Cargo.toml  build.rs
belanda-remote/: build.gradle.kts  settings.gradle.kts
belanda-remote/app/: build.gradle.kts
belanda-remote/app/src/androidTest/java/net/kafji/belanda/: ExampleInstrumentedTest.kt
belanda-remote/app/src/main/: AndroidManifest.xml
belanda-remote/app/src/main/java/net/kafji/belanda/: MainActivity.kt
belanda-remote/app/src/main/java/net/kafji/belanda/ui/theme/: Color.kt  Theme.kt  (+1 more)
belanda-remote/app/src/main/proto/: belanda.proto
belanda-remote/app/src/main/res/values/: strings.xml  themes.xml
belanda-remote/app/src/test/java/net/kafji/belanda/: ExampleUnitTest.kt
belanda-remote/gradle/wrapper/: gradle-wrapper.properties
belanda/proto/: belanda.proto
belanda/src/: lib.rs  main.rs  pb.rs
go/: .gitignore  README.md  build.bat  build.sh  go.mod  go.sum  outstandings.md  run.bat  run.sh
go/cmd/client/: main.go
go/cmd/rf/: main.go
go/cmd/server/: main.go
go/cmd/terong-client/: main.go
go/cmd/terong-obfuscate/: main.go
go/cmd/terong-server/: main.go
go/console/: writer.go
go/inputevent/: inputevent.go
go/inputsink/: compile_flags.txt  inputsink_linux_amd64.go  proxy_linux_amd64.c  proxy_linux_amd64.h
go/inputsource/: hook_windows_amd64.c  hook_windows_amd64.h  inputhook_windows_amd64.c  inputhook_windows_amd64.h  inputsource_windows_amd64.go
go/logging/: logging.go
go/terong/: app.go
go/terong/client/: client.go
go/terong/config/: config.go  config_test.go  watch.go
go/terong/server/: server.go
go/terong/transport/: tls.go  tls_test.go  transport.go
go/terong/transport/client/: client.go
go/terong/transport/server/: server.go
go/transport/: transport.go
go/transport/client/: client.go
go/transport/server/: server.go
go/transportclient/: transportclient.go
go/transportserver/: transportserver.go
rs/: README.md
rs/input-event/: Cargo.toml
rs/terong/: .gitignore  Cargo.toml  build.bat  example.terong.toml  todo.md
rs/terong/src/client/: mod.rs  transport_client.rs
rs/terong/src/input_source/: windows.rs
rs/terong/src/server/: mod.rs  transport_server.rs
rust/: .gitignore  Cargo.toml  README.md  build.bat  build.sh  example.terong.toml  justfile
rust/crates/macross/: Cargo.toml
rust/crates/macross/src/: get_port.rs  rusqlite.rs  typing.rs
rust/crates/macross/tests/: get_port.rs  secret.rs
rust/crates/posh/: Cargo.toml
rust/crates/posh/src/: cli.rs  lib.rs  linux.rs  main.rs  windows.rs
rust/crates/posh/src/windows/: process.rs
rust/crates/rf/: Cargo.toml
rust/crates/rf/src/: main.rs
rust/crates/sage/: Cargo.toml
rust/crates/sage/src/: lib.rs  parser.rs
rust/crates/scout/: Cargo.toml
rust/crates/scout/src/: windows.rs
rust/crates/terong/: Cargo.toml  README.md
rust/crates/terong/benches/: bench.rs
rust/crates/terong/src/: config.rs  event_buffer.rs  event_logger.rs  input_event.rs  lib.rs  logging.rs  tls.rs  typing.rs
rust/crates/terong/src/client/: config.rs  mod.rs  transport_client.rs
rust/crates/terong/src/event_logger/: obfuscate.rs  sync.rs
rust/crates/terong/src/server/: config.rs  mod.rs  transport_server.rs
rust/crates/terong/src/server/input_source/: controller.rs  event.rs  linux.rs  windows.rs
rust/crates/terong/src/transport/: mod.rs
rust/crates/terong/src/transport/protocol/: heartbeat.rs  mod.rs
rust/input-event/: Cargo.toml
rust/input-event/src/: lib.rs
rust/macross/: Cargo.toml  README.md
rust/macross/src/: database.rs  lib.rs  secret.rs
rust/macross/tests/: get_port.rs
rust/rf/: Cargo.toml
rust/rf/src/: hubyte.rs  lib.rs  main.rs
rust/sage/: Cargo.toml
rust/sage/src/: main.rs
rust/scout/: Cargo.toml
rust/scout/src/: lib.rs  main.rs
rust/src/: lib.rs
rust/src/client/input_sink/: mod.rs  windows.rs
rust/src/input_source/: controller.rs  mod.rs  windows.rs
rust/src/rf/: mod.rs
rust/src/rf/testdata/: table.json
rust/src/server/: mod.rs
rust/src/server/input_source/: windows.rs
rust/src/transport/protocol/: input_event.rs
rust/terong/: .gitignore  Cargo.toml  build.bat
rust/terong/src/: lib.rs
rust/terong/src/client/: mod.rs  transport_client.rs
rust/terong/src/client/input_sink/: linux.rs
rust/terong/src/rf/: mod.rs
rust/terong/src/server/: mod.rs  transport_server.rs
rust/terong/src/server/input_source/: controller.rs  windows.rs
rust/terong/src/transport/: mod.rs
rust/terong/src/transport/protocol/: heartbeat.rs
src/: client.rs  config.rs  lib.rs  logging.rs  protocol.rs  server.rs  transport.rs
src/client/: config.rs  mod.rs  protocol_client.rs  transport_client.rs
src/client/input_consumer/: linux.rs  mod.rs
src/client/input_event_consumer/: linux.rs
src/client/input_sink/: linux.rs  windows.rs
src/input_listener/: event.rs  linux.rs  windows.rs
src/input_source/: controller.rs  event.rs  linux.rs  mod.rs  windows.rs
src/protocol/: input_event.rs  mod.rs
src/server/: config.rs  mod.rs  protocol_server.rs  transport_server.rs
src/server/input_listener/: event.rs  linux.rs  mod.rs  windows.rs
src/transport/: mod.rs
src/transport/protocol/: heartbeat.rs  input_event.rs  mod.rs
terong/: .gitignore  Cargo.toml  build.sh
terong/src/: client.rs  event.rs  input_event.rs  lib.rs  main.rs  protocol.rs  server.rs
terong/src/client/: config.rs  mod.rs  protocol_client.rs  transport_client.rs
terong/src/client/event_consumer/: linux.rs  mod.rs  windows.rs
terong/src/client/input_event_consumer/: windows.rs
terong/src/client/input_sink/: linux.rs
terong/src/protocol/: message.rs
terong/src/server/: config.rs  mod.rs  protocol_server.rs
terong/src/server/event_producer/: linux.rs  windows.rs
terong/src/server/input_listener/: event.rs  linux.rs  mod.rs  windows.rs
terong/src/transport/protocol/: input_event.rs  mod.rs
