[package]
name = "terong"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
bincode = "1.3"
bytes = "1.2"
cfg-if = "1.0"
futures = "0.3"
macross = { git = "https://github.com/kafji/macross", features = [
    "secret",
    "typing",
] }
once_cell = "1.14"
paste = "1.0"
ring = "0.16"
rcgen = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
tokio-rustls = "0.23"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.39", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
