[package]
name = "belanda"
version = "0.0.0"
edition = "2021"

[build-dependencies]
prost-build = "0.12"

[dependencies]
anyhow = "1.0"
input-event = { path = "../input-event" }
prost = "0.12"
tokio = { version = "1.37", features = ["full"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }
