[package]
name = "terong"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = "1.3"
bytes = "1.2"
cfg-if = "1.0"
native-tls = "0.2"
once_cell = "1.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.39", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
