[package]
name = "input-event"
version = "0.0.0"
edition = "2021"

[dependencies]
macross = { git = "https://github.com/kafji/macross", features = ["typing"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
