[package]
name = "macross"
version = "0.0.0"
edition = "2021"

[features]
all = ["get_port", "typing", "rusqlite", "secret", "serde"]
database = []
get_port = ["thiserror"]
rusqlite = ["database", "indoc", "dep:rusqlite"]
secret = []
typing = []

[dependencies]
indoc = { version = "1", optional = true }
rusqlite = { version = "0.29", optional = true }
serde = { version = "1", optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
fastrand = "2.3"
serde_json = "1.0"
