[package]
name = "terong"
edition.workspace = true

[features]
default = ["bench"]
bench = []

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
bincode = "1"
bytes = "1"
ciborium = "0.2"
futures = "0.3"
getrandom = "0.3"
hex = "0.4"
paste = "1"
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
rcgen = "0.14"
tokio-test = "0.4"
